--- a/public/styles.css
+++ b/public/styles.css
@@ -2,11 +2,12 @@ body{
     /* background-image: url(./img/motifPizza.avif); */
     width: 100%;
     margin: 0%;
+    background-image: url(./img/motifPizza.avif);
 }
 
 header {
     background-image: url(./img/pizzafond3.webp);
-    height:max-content;
+    height:110px;
     width: 100%;
     background-size: contain;
     background-repeat: no-repeat;
@@ -14,17 +15,23 @@ header {
     padding-top: 48.25%;
     margin-top: 0%;
     display: flex;
+    
 
 }
 
 header h1 {
+    font-family: "Barriecito", serif;
+    font-weight: 400;
+    font-style: normal;
     color: rgb(0, 0, 0);
     font-size: 100px;
+    text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em blue, 0 0 0.2em blue;
     position: absolute;
-    top: 39%;
+    top: 38%;
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0;
+    
     /* Ajoutez d'autres styles si nécessaire, comme la taille de police, etc. */
 }
 .opacité {
@@ -32,6 +39,69 @@ header h1 {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(245, 242, 242, 0.208); /* Noir avec 50% d'opacité */
+    height: 82.6%;
+    background-color: rgba(68, 67, 67, 0.614); /* Noir avec 50% d'opacité */
   }
+
+  /* /// Cards Vitrine /// */
+  .vitrine {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 50px;
+    padding: 20px;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.card {
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    text-align: center;
+}
+
+.card h2 {
+    margin-top: 0;
+    font-size: 1.5em;
+}
+
+.card p {
+    margin: 10px 0;
+}
+
+.card ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.card ul li {
+    background-color: #e7e7e7;
+    margin: 5px 0;
+    padding: 5px;
+    border-radius: 4px;
+}
+.carte {
+    font-family: "Barriecito", serif;
+    font-weight: 400;
+    font-style: normal;
+    color: rgb(0, 0, 0);
+    font-size: 100px;
+    text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em rgba(110, 52, 4, 0.757), 0 0 0.2em rgb(110, 52, 4, 0.757);
+    background-color: #e7e7e7;
+    border-radius: 60%;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+
+    
+    
+
+}
+.card img {
+
+    max-width: 200px;
+    min-width:180px ;
+    min-height: 160px;
+    
+}
