--- a/groupeprojet/src/Components/Pizza/Pizza.css
+++ b/groupeprojet/src/Components/Pizza/Pizza.css
@@ -2,11 +2,11 @@ body{
     /* background-image: url(./img/motifPizza.avif); */
     width: 100%;
     margin: 0%;
-    background-image: url(./img/motifPizza.avif);
+    background-image: url(../../assets/img/pizzafond3.webp);
 }
 
 header {
-    background-image: url(./img/pizzafond3.webp);
+    /* background-image: url(../../assets/img/motifPizza.avif); */
     height:110px;
     width: 100%;
     background-size: contain;
@@ -25,7 +25,8 @@ header h1 {
     font-style: normal;
     color: rgb(0, 0, 0);
     font-size: 100px;
-    text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em blue, 0 0 0.2em blue;
+    text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em rgba(110, 52, 4, 0.757), 0 0 0.2em rgb(110, 52, 4, 0.757);
+    text-decoration: underline;
     position: absolute;
     top: 38%;
     left: 50%;
@@ -49,8 +50,10 @@ header h1 {
     grid-template-columns: repeat(4, 1fr);
     gap: 50px;
     padding: 20px;
-    max-width: 1200px;
-    margin: auto;
+    width: 100%;
+    /*  */
+    /* margin: auto; */
+    background-image: url(../../assets/img/motifPizza.avif);
 }
 
 .card {
