--- a/groupeprojet/src/Components/Pizza/Pizza.css
+++ b/groupeprojet/src/Components/Pizza/Pizza.css
@@ -7,14 +7,15 @@ body{
 
 header {
     /* background-image: url(../../assets/img/motifPizza.avif); */
-    height:110px;
+    height:40px;
     width: 100%;
     background-size: contain;
     background-repeat: no-repeat;
-    /* background-position: center; */
+    background-position: center;
     padding-top: 48.25%;
     margin-top: 0%;
     display: flex;
+    
     
 
 }
@@ -26,7 +27,7 @@ header h1 {
     color: rgb(0, 0, 0);
     font-size: 100px;
     text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em rgba(110, 52, 4, 0.757), 0 0 0.2em rgb(110, 52, 4, 0.757);
-    text-decoration: underline;
+    text-decoration:underline ;
     position: absolute;
     top: 38%;
     left: 50%;
@@ -53,7 +54,9 @@ header h1 {
     width: 100%;
     /*  */
     /* margin: auto; */
-    background-image: url(../../assets/img/motifPizza.avif);
+    /* background-image: url(../../assets/img/motifPizza.avif); */
+    text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em rgba(110, 52, 4, 0.827), 0 0 0.2em rgb(110, 52, 4, 0.757);
+    background-color: #e7e7e7;
 }
 
 .card {
@@ -62,6 +65,7 @@ header h1 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 30px;
     text-align: center;
+    font-family: "Barriecito", serif;   
 }
 
 .card h2 {
@@ -96,15 +100,15 @@ header h1 {
     display: flex; 
     justify-content: center;
     align-items: center;
-
-    
-    
-
 }
 .card img {
 
-    max-width: 200px;
-    min-width:180px ;
-    min-height: 160px;
+    max-width: 180px;
+    min-width:150px ;
+    min-height: 150px;
+    max-height: 150px;
     
+}
+.card button {
+    justify-content: space-between 10px;
 }
