--- a/groupeprojet/src/Components/Pizza/Pizza.css
+++ b/groupeprojet/src/Components/Pizza/Pizza.css
@@ -1,23 +1,23 @@
 body{
-    /* background-image: url(./img/motifPizza.avif); */
+    background-image: url(../../assets/img/motifPizza.avif);
+    background-repeat: repeat;
     width: 100%;
     margin: 0%;
-    background-image: url(../../assets/img/pizzafond3.webp);
+    /* background-image: url(../../assets/img/pizzafond3.webp); */
 }
 
 header {
     /* background-image: url(../../assets/img/motifPizza.avif); */
-    height:40px;
+    height:400px;
     width: 100%;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    padding-top: 48.25%;
+    padding-top: 10.25%;
     margin-top: 0%;
     display: flex;
+    background-image: url(../../assets/img/pizzafond3.webp);
     
-    
-
 }
 
 header h1 {
@@ -49,14 +49,15 @@ header h1 {
   .vitrine {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 50px;
-    padding: 20px;
+    gap: 30px;
+    padding: 25px;
     width: 100%;
     /*  */
     /* margin: auto; */
     /* background-image: url(../../assets/img/motifPizza.avif); */
     text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em rgba(110, 52, 4, 0.827), 0 0 0.2em rgb(110, 52, 4, 0.757);
     background-color: #e7e7e7;
+    
 }
 
 .card {
@@ -87,6 +88,7 @@ header h1 {
     margin: 5px 0;
     padding: 5px;
     border-radius: 4px;
+    height: 80px;
 }
 .carte {
     font-family: "Barriecito", serif;
@@ -110,5 +112,38 @@ header h1 {
     
 }
 .card button {
-    justify-content: space-between 10px;
+    
+    padding: 15px;
+    
+}
+.contBtn{
+    display: flex;
+    justify-content: baseline;
+    height: 12vh;
+}
+.card button {
+    /* display: block; */
+    /* width: 20%; */
+    height: 55px;
+    padding: 20px;
+    gap: 5px;
+    margin-bottom: 15px; /* Espacement entre les boutons */
+    /* border: none; */
+    border-radius: 40%;
+    background-color: #007bff;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    padding-top: 20px;
+}
+
+/* Style du dernier bouton (pour enlever la marge en bas) */
+/* .card button:last-child {
+    margin-bottom: 0;
+} */
+
+/* Effet de survol sur les boutons */
+.card button:hover {
+    background-color: #0056b3;
 }
