--- a/groupeprojet/src/Components/Pizza/Pizza.css
+++ b/groupeprojet/src/Components/Pizza/Pizza.css
@@ -56,7 +56,7 @@ header h1 {
     /* margin: auto; */
     /* background-image: url(../../assets/img/motifPizza.avif); */
     text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em rgba(110, 52, 4, 0.827), 0 0 0.2em rgb(110, 52, 4, 0.757);
-    background-color: #e7e7e7;
+    /* background-color: #e7e7e7; */
     
 }
 
