--- a/groupeprojet/src/Components/Pizza/Pizza.css
+++ b/groupeprojet/src/Components/Pizza/Pizza.css
@@ -20,13 +20,16 @@ header {
     position: relative;
 }
 
-header h1 {
-    color: rgba(244, 239, 239, 0.935);
-    font-size: 4rem;
-    text-shadow: 2px 1px 3px rgba(14, 10, 10, 0.726), 0 0 1em rgba(110, 52, 4, 0.757), 0 0 0.2em rgb(110, 52, 4, 0.757);
-    text-decoration: underline;
-    margin: 0;
-    text-align: center;
+.Pizza h1{
+    background-color: rgba(230, 217, 207, 0.943);
+    justify-content: center;
+    align-items: center;
+    text-align:center;
+    letter-spacing: 45px;
+    height: 60px;
+    
+
+
 }
 
 /* Cards Vitrine */
@@ -46,6 +49,7 @@ header h1 {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+    margin-top: 40px;
 }
 
 .card {
