--- a/groupeprojet/src/Components/Pizza/Pizza.css
+++ b/groupeprojet/src/Components/Pizza/Pizza.css
@@ -31,7 +31,18 @@ header {
 
 
 }
+h2{
+    background-color: rgba(230, 217, 207, 0.943);
+    justify-content: center;
+    align-items: center;
+    text-align:center;
+    letter-spacing: 25px;
+    height: 60px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 50px;
 
+}
 /* Cards Vitrine */
 .vitrine {
     display: grid;
@@ -49,7 +60,7 @@ header {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
-    margin-top: 40px;
+    margin-top: 40pxgit ;
 }
 
 .card {
@@ -105,8 +116,8 @@ header {
     padding: 10px 20px;
     border: none;
     border-radius: 20px;
-    background-color: #007bff;
-    color: white;
+    background-color: rgba(230, 217, 207, 0.943);
+    color: rgb(0, 0, 0);
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -119,7 +130,7 @@ header {
 .carte {
     font-size: 2.5rem;
     text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em rgba(110, 52, 4, 0.757), 0 0 0.2em rgb(110, 52, 4, 0.757);
-    background-color: #e7e7e7;
+    background-color: rgba(230, 217, 207, 0.943);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -136,4 +147,7 @@ header {
     .vitrine {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
+}
+input {
+    background:rgba(230, 217, 207, 0.943);
 }
