--- a/groupeprojet/src/Components/Navbar/Navbar.css
+++ b/groupeprojet/src/Components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-
+/* 
 html {
     --var-bg-color: #7743e9;
     --var-secondary-color: #6e51cf;
@@ -73,4 +73,4 @@ header button:hover{
     header nav{
         display: none;
     }
-}
+} */
