--- a/groupeprojet/src/Components/Footer/Footer.css
+++ b/groupeprojet/src/Components/Footer/Footer.css
@@ -4,6 +4,7 @@ footer {
     padding: 20px 0;
     width: 100%;
     box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1); /* Ombre douce */
+    background-color: rgb(230, 217, 207);
 }
 
 /* Conteneur des boutons */
