--- a/groupeprojet/src/Components/Pizza/Pizza.css
+++ b/groupeprojet/src/Components/Pizza/Pizza.css
@@ -21,18 +21,18 @@ header {
 }
 
 .Pizza h1{
-    background-color: rgba(230, 217, 207, 0.943);
+    background-color: rgb(230, 217, 207);
     justify-content: center;
     align-items: center;
     text-align:center;
     letter-spacing: 45px;
     height: 60px;
-    
+    margin-bottom: 60px;
 
 
 }
 h2{
-    background-color: rgba(230, 217, 207, 0.943);
+    background-color: rgb(230, 217, 207);
     justify-content: center;
     align-items: center;
     text-align:center;
